# truck_marketplace

./: .env.example  .gitignore  README.md  alembic.ini  config.py  create_env.bat  database.py  install_dependencies.bat  keyboards.py  main.py  new_main.py  pyproject.toml  requirements.txt  restart.bat  run.py  run_debug.bat  setup.py  start.bat  states.py  test_new_architecture.py  utils.py
alembic/: env.py
app/: init.py  main.py
app/core/entities/: category.py  equipment.py  offer.py  order.py  review.py  user.py
app/core/repositories/: base_repository.py  equipment_repository.py  offer_repository.py  order_repository.py  user_repository.py
app/core/services/: equipment_service.py  offer_service.py  order_service.py  user_service.py
app/infrastructure/: init.py
app/infrastructure/database/: alembic_config.py  database_manager.py  init.py  mappers.py  models.py  repository_factory.py  sqlalchemy_equipment_repository.py  sqlalchemy_offer_repository.py  sqlalchemy_order_repository.py  sqlalchemy_user_repository.py
app/presentation/: init.py  keyboards.py  middleware.py
app/presentation/handlers/: __init__.py  registration.py  user_handlers.py
app/shared/: config.py  dependencies.py  init.py  logger.py  states.py
handlers/: __init__.py  commands.py  customer.py  equipment.py  executor.py  profile_edit.py
scripts/: migrate_data.py
templates/: handler_template.py
